Add more stubs until the Docker instances come up cleanly, and can serve a request for /
